<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:textColor="@color/negro"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion_texto"
        android:textColor="@color/titulo_morado"
        android:layout_marginBottom="32dp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_bg"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/blanco"
        android:textColorHint="#888888" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/blanco"
        android:textColorHint="#888888" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/entrar"
        android:backgroundTint="@color/acento_morado"
        app:cornerRadius="8dp"
        android:padding="12dp"/>

    <TextView
        android:id="@+id/tvRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/no_cuenta"
        android:textColor="@color/acento_morado"
        android:textSize="14sp" />

</LinearLayout>